=======
CHANGES
=======

3.7.0 (unreleased)
------------------

- Remove dependencies on zope.app.principalannotation and zope.securitypolicy
  by using the simple PermissiveSecurityPolicy. We aren't testing security
  in our tests.

- Replaced the testing dependency on zope.app.zcmlfiles with explicit
  dependencies of a minimal set of packages.

- Remove unneeded zope.app.authentication from ftesting.zcml.

- Test dependency on zope.securitypolicy instead of its app variant.


3.6.0a2 (2009-01-31)
--------------------

- Test dependency on zope.site.folder instead of zope.app.folder.

- Remove useless test dependency in zope.app.component.


3.6.0a1 (2009-01-08)
--------------------

- Author e-mail to zope-dev rather than zope3-dev.

- New lines are no longer stripped in XML and HTML code contained in a
  textarea; fix requires ClientForm >= 0.2.10 (LP #268139).

- Added ``cookies`` attribute to browser for easy manipulation of browser
  cookies.  See brief example in main documentation, plus new ``cookies.txt``
  documentation.


3.5.1 (2008-10-10)
------------------

- Provide a work around for a mechanize/urllib2 bug on Python 2.6
  missing 'timeout' attribute on 'Request' base class.

- Provide a work around for a mechanize/urllib2 bug in creating request
  objects that won't handle fragment URLs correctly.


3.5.0 (2008-03-30)
------------------

- Added a zope.testbrowser.testing.Browser.post method that allows
  tests to supply a body and a content type.  This is handy for
  testing Ajax requests with non-form input (e.g. JSON).

- Remove vendor import of mechanize.

- Fix bug that caused HTTP exception tracebacks to differ between version 3.4.0
  and 3.4.1.

- Workaround for bug in Python Cookie.SimpleCookie when handling unicode
  strings.

- Fix bug introduced in 3.4.1 that created incompatible tracebacks in doctests.
  This necessitated adding a patched mechanize to the source tree; patches have
  been sent to the mechanize project.
