@@ -1,13 +1,6 @@
 [buildout]
 develop = .
 parts = test interpreter
-versions = versions
-
-[versions]
-zope.testbrowser =
-zope.container = 3.8.2
-zope.publisher = 3.8.0
-zope.app.publisher = 3.8.4
 
 [test]
 recipe = zc.recipe.testrunner
