@@ -3,7 +3,7 @@
 
     <h1>Controls Tests</h1>
 
-    <form action="controls.html" method="post">
+    <form action="controls.html" method="get">
 
       <div>
         <label for="text-value">Text Control</label>
