@@ -6,8 +6,7 @@
     <em tal:condition="request/text-value|nothing"
         tal:content="request/text-value" />
 
-    <form id="1" name="one" action="forms.html"
-          enctype="multipart/form-data" method="post">
+    <form id="1" name="one" action="forms.html">
       <input type="text" name="text-value" value="First Text" />
       <input type="image" name="image-1" src="zope3logo.gif" />
       <input type="submit" name="submit-1" value="Submit" />
