@@ -7,21 +7,24 @@
 
   <!-- This file is used for functional testing setup -->
 
+  <include package="zope.browserpage" file="meta.zcml" />
+  <include package="zope.browserresource" file="meta.zcml" />
   <include package="zope.component" file="meta.zcml" />
+  <include package="zope.publisher" file="meta.zcml" />
   <include package="zope.security" file="meta.zcml" />
-  <include package="zope.app.publisher" file="meta.zcml" />
   <include package="zope.app.publication" file="meta.zcml" />
 
+  <include package="zope.browserresource" />
   <include package="zope.component" />
   <include package="zope.container" />
   <include package="zope.principalregistry" />
+  <include package="zope.ptresource" />
   <include package="zope.publisher" />
   <include package="zope.security" />
   <include package="zope.site" />
   <include package="zope.traversing" />
 
   <include package="zope.app.appsetup" />
-  <include package="zope.app.publisher" />
   <include package="zope.app.publication" />
 
   <securityPolicy
